[package]
name = "trycmd"
version = "0.8.1"
description = "Snapshot testing for a herd of CLI tests"
authors = ["Ed Page <eopage@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/assert-rs/trycmd.git"
homepage = "https://github.com/assert-rs/trycmd"
documentation = "http://docs.rs/trycmd/"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["cli", "test", "assert", "command", "duct"]
edition = "2018"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/trycmd/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = ["color-auto", "filesystem", "diff"]
color = ["yansi", "concolor-control/std"]
color-auto = ["color", "concolor-control/auto"]
schema = ["schemars", "serde_json"]
diff = ["difflib"]
filesystem = ["tempfile", "walkdir"]
examples = ["escargot"]
debug = ["backtrace"]

[[bin]]
name = "bin-fixture"

[[bin]]
name = "trycmd-schema"
required-features = ["schema"]

[dependencies]
yansi = { version = "0.5.0", optional = true }
concolor-control = { version = "0.0.7", optional = true }

glob = "0.3.0"
rayon = "1.5.1"

serde = { version = "1.0", features = ["derive"] }
shlex = "1.1.0"
humantime = "2"
humantime-serde = "1"
toml_edit = { version = "0.8", features = ["serde"] }
escargot = { version = "0.5.6", optional = true }

normalize-line-endings = "0.3.0"
os_pipe = "0.9"
wait-timeout = "0.2.0"
difflib = { version = "0.4", optional = true }
tempfile = { version = "3.0", optional = true }
walkdir = { version = "2.3.2", optional = true }
backtrace = { version = "0.3", optional = true }

schemars = { version = "0.8.3", features = ["preserve_order"], optional = true }
serde_json = { version = "1.0", optional = true }
