[workspace]
members = ["crates/*"]

[package]
name = "trycmd"
version = "0.12.2"
description = "Snapshot testing for a herd of CLI tests"
authors = ["Ed Page <eopage@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/assert-rs/trycmd.git"
homepage = "https://github.com/assert-rs/trycmd"
documentation = "http://docs.rs/trycmd/"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["cli", "test", "assert", "command", "duct"]
edition = "2018"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/trycmd/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = ["color-auto", "filesystem", "diff"]
color = ["fs_snapshot/color"]
color-auto = ["fs_snapshot/color-auto"]
diff = ["fs_snapshot/diff"]
filesystem = ["tempfile", "walkdir", "dunce", "content_inspector"]

schema = ["schemars", "serde_json"]
examples = ["escargot"]
debug = ["fs_snapshot/debug"]

[[bin]]
name = "bin-fixture"

[[bin]]
name = "trycmd-schema"
required-features = ["schema"]

[dependencies]
fs_snapshot = { path = "crates/fs_snapshot", version = "0.1.2", default-features = false }

glob = "0.3.0"
rayon = "1.5.1"

serde = { version = "1.0", features = ["derive"] }
shlex = "1.1.0"
humantime = "2"
humantime-serde = "1"
toml_edit = { version = "0.13", features = ["serde"] }
escargot = { version = "0.5.7", optional = true }

normalize-line-endings = "0.3.0"
os_pipe = "1.0"
wait-timeout = "0.2.0"
tempfile = { version = "3.0", optional = true }
walkdir = { version = "2.3.2", optional = true }
dunce = { version = "1.0", optional = true }
content_inspector = { version = "0.2.4", optional = true }

schemars = { version = "0.8.3", features = ["preserve_order"], optional = true }
serde_json = { version = "1.0", optional = true }
