[workspace]
members = ["crates/*"]

[package]
name = "trycmd"
version = "0.14.10"
description = "Snapshot testing for a herd of CLI tests"
authors = ["Ed Page <eopage@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/assert-rs/trycmd.git"
homepage = "https://github.com/assert-rs/trycmd"
documentation = "http://docs.rs/trycmd/"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["cli", "test", "assert", "command", "duct"]
edition = "2021"
rust-version = "1.60.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/trycmd/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = ["color-auto", "filesystem", "diff"]
color = ["snapbox/color"]
color-auto = ["snapbox/color-auto"]
diff = ["snapbox/diff"]
filesystem = ["snapbox/path"]

schema = ["dep:schemars", "dep:serde_json"]
examples = ["dep:escargot"]
debug = ["snapbox/debug"]

[[bin]]
name = "bin-fixture"

[[bin]]
name = "trycmd-schema"
required-features = ["schema"]

[dependencies]
snapbox = { path = "crates/snapbox", version = "0.4.4", default-features = false, features = ["cmd"] }

glob = "0.3.0"
rayon = "1.5.1"

serde = { version = "1.0", features = ["derive"] }
shlex = "1.1.0"
humantime = "2"
humantime-serde = "1"
toml_edit = { version = "0.19", features = ["serde"] }
escargot = { version = "0.5.7", optional = true }

schemars = { version = "0.8.3", features = ["preserve_order"], optional = true }
serde_json = { version = "1.0", optional = true }
