[package]
name = "fs_snapshot"
version = "0.1.2"
description = "Simple input/output file snapshotting"
license = "MIT OR Apache-2.0"
repository = "https://github.com/assert-rs/cargo-api.git"
homepage = "https://github.com/assert-rs/cargo-api"
documentation = "http://docs.rs/fs-snapshot/"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["cli", "test", "assert", "command"]
edition = "2018"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/fs_snapshot/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = ["color-auto", "diff"]
color = ["yansi", "concolor/std"]
color-auto = ["color", "concolor/auto"]
diff = ["difflib"]

[dependencies]
libtest-mimic = "0.3.0"
ignore = "0.4"
normalize-line-endings = "0.3.0"

yansi = { version = "0.5.0", optional = true }
concolor = { version = "0.0.8", optional = true }

difflib = { version = "0.4", optional = true }
