[package]
name = "snapbox-macros"
version = "0.4.0"
description = "Snapshot testing toolbox"
categories = ["development-tools::testing"]
keywords = ["cli", "test", "assert", "command"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
default = []
color = ["dep:anstream"]

## Extra debugging information
debug = []

[dependencies]
anstream = { version = "0.6.20", optional = true }

[lints]
workspace = true
