[package]
name = "snapbox"
version = "0.1.2"
description = "Snapshot testing toolbox"
license = "MIT OR Apache-2.0"
repository = "https://github.com/assert-rs/trycmd/"
homepage = "https://github.com/assert-rs/trycmd/tree/main/crates/snapbox"
documentation = "http://docs.rs/snapbox/"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["cli", "test", "assert", "command"]
edition = "2018"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/snapbox/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = ["color-auto", "diff"]

#! Feature Flags

## Simple input/output test harness
harness = ["libtest-mimic", "ignore"]
## Smarter binary file detection
detect-encoding = ["content_inspector"]
## Snapshotting of paths
path = ["tempfile", "walkdir", "dunce", "detect-encoding"]
## Snapshotting of commands
cmd = ["os_pipe", "wait-timeout"]

## Extra debugging information
debug = ["snapbox-macros/debug", "backtrace"]

#! Default Feature Flags

## Fancy diffs on failure
diff = ["similar"]
## Colored output support
color = ["yansi", "concolor/std"]
## Auto-detect whether to use colors
color-auto = ["color", "concolor/auto"]

[[bin]]
name = "snap-fixture"

[dependencies]
normalize-line-endings = "0.3.0"
snapbox-macros = { path = "../snapbox-macros", version = "0.1.2" }

libtest-mimic = { version = "0.3.0", optional = true }
ignore = { version = "0.4", optional = true }

content_inspector = { version = "0.2.4", optional = true }

tempfile = { version = "3.0", optional = true }
walkdir = { version = "2.3.2", optional = true }
dunce = { version = "1.0", optional = true }

os_pipe = { version = "1.0", optional = true }
wait-timeout = { version = "0.2.0", optional = true }

backtrace = { version = "0.3", optional = true }

similar = { version = "2.1.0", features = ["inline"], optional = true }

yansi = { version = "0.5.0", optional = true }
concolor = { version = "0.0.8", optional = true }

document-features = { version = "0.2", optional = true }
