[package]
name = "snapbox"
version = "0.4.1"
description = "Snapshot testing toolbox"
license = "MIT OR Apache-2.0"
repository = "https://github.com/assert-rs/trycmd/"
homepage = "https://github.com/assert-rs/trycmd/tree/main/crates/snapbox"
documentation = "http://docs.rs/snapbox/"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["cli", "test", "assert", "command"]
edition = "2021"
rust-version = "1.60.0"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/trycmd/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = ["color-auto", "diff"]

#! Feature Flags

## Simple input/output test harness
harness = ["dep:libtest-mimic", "dep:ignore"]
## Smarter binary file detection
detect-encoding = ["dep:content_inspector"]
## Snapshotting of paths
path = ["dep:tempfile", "dep:walkdir", "dep:dunce", "detect-encoding", "dep:filetime"]
## Snapshotting of commands
cmd = ["dep:os_pipe", "dep:wait-timeout", "dep:libc", "dep:winapi"]

## Snapshotting of json
json = ["structured-data"]
## Snapshotting of structured data
structured-data = ["dep:serde_json"]

## Extra debugging information
debug = ["snapbox-macros/debug", "dep:backtrace"]

#! Default Feature Flags

## Fancy diffs on failure
diff = ["dep:similar"]
## Colored output support
color = ["dep:yansi", "concolor"]
## Auto-detect whether to use colors
color-auto = ["color", "concolor/auto"]

[[bin]]
name = "snap-fixture"  # For `snapbox`s tests only

[dependencies]
normalize-line-endings = "0.3.0"
snapbox-macros = { path = "../snapbox-macros", version = "0.3.0" }

libtest-mimic = { version = "0.5.2", optional = true }
ignore = { version = "0.4", optional = true }

content_inspector = { version = "0.2.4", optional = true }

tempfile = { version = "3.0", optional = true }
walkdir = { version = "2.3.2", optional = true }
dunce = { version = "1.0", optional = true }
filetime = { version = "0.2", optional = true }

os_pipe = { version = "1.0", optional = true }
wait-timeout = { version = "0.2.0", optional = true }
libc = { version = "0.2.137", optional = true }
winapi = { version = "0.3.9", features = ["consoleapi", "minwindef"], optional = true }

backtrace = { version = "0.3", optional = true }

similar = { version = "2.1.0", features = ["inline"], optional = true }

yansi = { version = "0.5.0", optional = true }
concolor = { version = "0.0.9", features = ["std"], optional = true }

document-features = { version = "0.2.6", optional = true }

serde_json = { version = "1.0.85", optional = true}
