[package]
name = "trycmd"
version = "0.15.11"
description = "Snapshot testing for a herd of CLI tests"
categories = ["development-tools::testing"]
keywords = ["cli", "test", "assert", "command", "duct"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/trycmd/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = ["color-auto", "filesystem", "diff"]
color = ["snapbox/color", "dep:anstream"]
color-auto = ["color", "snapbox/color-auto"]
diff = ["snapbox/diff"]
filesystem = ["snapbox/dir"]

schema = ["dep:schemars", "dep:serde_json"]
examples = ["snapbox/examples"]
debug = ["snapbox/debug"]

[[bin]]
name = "bin-fixture"

[[bin]]
name = "trycmd-schema"
required-features = ["schema"]

[dependencies]
automod = "1.0.15"
snapbox = { path = "../snapbox", version = "0.6.23", default-features = false, features = ["cmd"] }
anstream = { version = "0.6.20", optional = true }

glob = "0.3.3"
rayon = "1.10.0"

serde = { version = "1.0", features = ["derive"] }
shlex = "1.3.0"
humantime = "2"
humantime-serde = "1"
toml_edit = { version = "0.23.5", features = ["serde"] }
escargot = { version = "0.5.14", optional = true }

schemars = { version = "0.8.22", features = ["preserve_order"], optional = true }
serde_json = { version = "1.0", optional = true }

[lints]
workspace = true
