[package]
name = "tryfn"
version = "0.2.1"
description = "File-driven snapshot testing for a function"
authors = ["Ed Page <eopage@gmail.com>"]
repository = "https://github.com/assert-rs/trycmd.git"
homepage = "https://github.com/assert-rs/trycmd"
documentation = "http://docs.rs/tryfn/"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["test", "assert", "snapsjot"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/trycmd/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = ["color-auto", "diff"]
diff = ["snapbox/diff"]
color = ["snapbox/color"]
color-auto = ["snapbox/color-auto"]

[dependencies]
snapbox = { path = "../snapbox", version = "0.6.10", default-features = false }
libtest-mimic = "0.7.0"
ignore = "0.4.11"
